[gd_scene load_steps=30 format=2]

[ext_resource path="res://game/settings/general_settings.gd" type="Script" id=1]
[ext_resource path="res://game/settings/fps_settings.gd" type="Script" id=2]
[ext_resource path="res://game/settings/rts_settings.gd" type="Script" id=3]
[ext_resource path="res://game/game_logic/main_loop.gd" type="Script" id=4]
[ext_resource path="res://game/game_logic/fps_logic/fps_logic.gd" type="Script" id=5]
[ext_resource path="res://game/game_logic/rts_logic/rts_logic.gd" type="Script" id=6]
[ext_resource path="res://game/user_interface/input_handler/input_handler.gd" type="Script" id=7]
[ext_resource path="res://game/user_interface/input_handler/first_person_input_handler.gd" type="Script" id=8]
[ext_resource path="res://game/user_interface/input_handler/rts_input_handler.gd" type="Script" id=9]
[ext_resource path="res://game/user_interface/ui_handler.gd" type="Script" id=10]
[ext_resource path="res://game/world/actors/characters/player.tscn" type="PackedScene" id=11]
[ext_resource path="res://game/world/actors/characters/NPCs/npc.tscn" type="PackedScene" id=12]
[ext_resource path="res://game/world/actors/objects/constructions/cone_of_construction/cone_of_construction.tscn" type="PackedScene" id=13]
[ext_resource path="res://game/world/actors/objects/vehicles/vehicle.tscn" type="PackedScene" id=14]
[ext_resource path="res://game/world/actors/objects/vehicles/tanks/basic_tank/tank.tscn" type="PackedScene" id=15]
[ext_resource path="res://game/world/actors/objects/vehicles/tanks/resource_collector/resource_collector.tscn" type="PackedScene" id=16]
[ext_resource path="res://game/world/actors/objects/weapons/pistol/pistol.tscn" type="PackedScene" id=17]
[ext_resource path="res://game/world/actors/objects/weapons/sword/sword.tscn" type="PackedScene" id=18]
[ext_resource path="res://game/world/actors/mechanics/object_spawners/item_spawners/energy_rifle_spawner/energy_rifle_spawner.tscn" type="PackedScene" id=19]
[ext_resource path="res://game/world/actors/mechanics/object_spawners/item_spawners/plazma_rifle_spawner/plazma_rifle_spawner.tscn" type="PackedScene" id=20]
[ext_resource path="res://game/world/actors/objects/interactables/rts_button/rts_button.tscn" type="PackedScene" id=21]
[ext_resource path="res://assets/gui_in_3D_test/Gui_in_3D.tscn" type="PackedScene" id=22]
[ext_resource path="res://game/world/environment/terrain/centre.tscn" type="PackedScene" id=23]
[ext_resource path="res://game/world/environment/terrain/sets/ground_tiles.tres" type="MeshLibrary" id=24]
[ext_resource path="res://game/world/maps/map1.tscn" type="PackedScene" id=25]
[ext_resource path="res://game/world/environment/structures/building.tscn" type="PackedScene" id=26]
[ext_resource path="res://game/world/environment/foilage/naturePack_052.obj" type="ArrayMesh" id=27]
[ext_resource path="res://game/world/environment/foilage/naturePack_051.obj" type="ArrayMesh" id=28]
[ext_resource path="res://game/world/environment/foilage/naturePack_053.obj" type="ArrayMesh" id=29]

[node name="game" type="Node" index="0"]

pause_mode = 1
_sections_unfolded = [ "Pause" ]

[node name="settings" type="Node" parent="." index="0"]

editor/display_folded = true

[node name="general_settings" type="Node" parent="settings" index="0"]

script = ExtResource( 1 )

[node name="fps_settings" type="Node" parent="settings" index="1"]

script = ExtResource( 2 )

[node name="rts_settings" type="Node" parent="settings" index="2"]

script = ExtResource( 3 )
destination_lines_enabled = 1

[node name="game_logic" type="Node" parent="." index="1"]

[node name="main_loop" type="Node" parent="game_logic" index="0"]

script = ExtResource( 4 )

[node name="fps_logic" type="Node" parent="game_logic/main_loop" index="0"]

script = ExtResource( 5 )

[node name="rts_logic" type="Node" parent="game_logic/main_loop" index="1"]

script = ExtResource( 6 )

[node name="input_handler" type="Node" parent="game_logic" index="1"]

script = ExtResource( 7 )
_sections_unfolded = [ "Pause" ]

[node name="first_person_input_handler" type="Node" parent="game_logic/input_handler" index="0"]

script = ExtResource( 8 )

[node name="rts_input_handler" type="Node" parent="game_logic/input_handler" index="1"]

script = ExtResource( 9 )

[node name="ui_handler" type="Node" parent="game_logic" index="2"]

script = ExtResource( 10 )

[node name="game_world" type="Spatial" parent="." index="2"]

[node name="actors" type="Spatial" parent="game_world" index="0"]

[node name="characters" type="Spatial" parent="game_world/actors" index="0"]

editor/display_folded = true

[node name="player" parent="game_world/actors/characters" index="0" instance=ExtResource( 11 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.14211, 4.67398, -3.43744 )

[node name="npc" parent="game_world/actors/characters" index="1" instance=ExtResource( 12 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.9249, 16.2145, -45.5866 )

[node name="npc2" parent="game_world/actors/characters" index="2" instance=ExtResource( 12 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15.5899, 16.2145, -39.2331 )

[node name="npc4" parent="game_world/actors/characters" index="3" instance=ExtResource( 12 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.5291, 16.2145, 21.4568 )

[node name="npc6" parent="game_world/actors/characters" index="4" instance=ExtResource( 12 )]

transform = Transform( 0.950128, 0.0702835, 0.303838, 0.0592231, 0.915881, -0.397057, -0.306186, 0.395249, 0.866042, -20.328, 16.2145, -49.1527 )

[node name="objects" type="Spatial" parent="game_world/actors" index="1"]

[node name="containers" type="Spatial" parent="game_world/actors/objects" index="0"]

[node name="constructions" type="Spatial" parent="game_world/actors/objects" index="1"]

editor/display_folded = true

[node name="cone_of_construction" parent="game_world/actors/objects/constructions" index="0" groups=[
"available_build_area",
"rts_constructions",
] instance=ExtResource( 13 )]

transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 51.5813, 0.427024, -31.1995 )
_sections_unfolded = [ "Transform" ]

[node name="items" type="Spatial" parent="game_world/actors/objects" index="2"]

[node name="vehicles" type="Spatial" parent="game_world/actors/objects" index="3"]

editor/display_folded = true

[node name="car" parent="game_world/actors/objects/vehicles" index="0" instance=ExtResource( 14 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.7716, 3.96946, -23.5611 )

[node name="tank" parent="game_world/actors/objects/vehicles" index="1" instance=ExtResource( 15 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 30.8938, 2.89388, -21.585 )

[node name="resource_collector" parent="game_world/actors/objects/vehicles" index="2" instance=ExtResource( 16 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 40.0934, 3.06272, -21.8202 )

[node name="weapons" type="Spatial" parent="game_world/actors/objects" index="4"]

editor/display_folded = true

[node name="pistol" parent="game_world/actors/objects/weapons" index="0" instance=ExtResource( 17 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.93935, 4.21087, -11.3791 )

[node name="sword" parent="game_world/actors/objects/weapons" index="1" instance=ExtResource( 18 )]

transform = Transform( -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0, 1, 29.7587, 6.9196, 20.1328 )

[node name="item_spawns" type="Spatial" parent="game_world/actors/objects" index="5"]

editor/display_folded = true

[node name="energy_rifle_spawner" parent="game_world/actors/objects/item_spawns" index="0" instance=ExtResource( 19 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.91965, 2.8275, 17.3738 )

[node name="plazma_rifle_spawner" parent="game_world/actors/objects/item_spawns" index="1" instance=ExtResource( 20 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15.65, 2.5654, 11.6016 )
item_already_spawned = 0

[node name="pickups" type="Spatial" parent="game_world/actors/objects" index="6"]

[node name="interactables" type="Spatial" parent="game_world/actors/objects" index="7"]

_sections_unfolded = [ "Transform" ]

[node name="rts_button" parent="game_world/actors/objects/interactables" index="0" instance=ExtResource( 21 )]

transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 7.67677, 2.28473, -9.09418 )
_sections_unfolded = [ "Transform" ]

[node name="settings_terminal" parent="game_world/actors/objects/interactables" index="1" instance=ExtResource( 22 )]

transform = Transform( 0.465796, 0.353992, -0.811002, 0, 0.916498, 0.40004, 0.884893, -0.186337, 0.426901, 9.05551, 3.40818, -6.77945 )
_sections_unfolded = [ "Transform" ]

[node name="creatures" type="Spatial" parent="game_world/actors" index="2"]

[node name="environment" type="Spatial" parent="game_world" index="1"]

editor/display_folded = true

[node name="terrain" type="Spatial" parent="game_world/environment" index="0"]

editor/display_folded = true

[node name="centre" parent="game_world/environment/terrain" index="0" instance=ExtResource( 23 )]

transform = Transform( 5.5, 0, 0, 0, 0.5, 0, 0, 0, 5.5, 0, 0.29497, 0 )

[node name="world_segments" type="GridMap" parent="game_world/environment/terrain" index="1"]

transform = Transform( 3, 0, 0, 0, 1, 0, 0, 0, 3, 0, 0, 0 )
theme = ExtResource( 24 )
cell_size = Vector3( 2, 2, 2 )
cell_octant_size = 8
cell_center_x = true
cell_center_y = false
cell_center_z = true
cell_scale = 1.0
collision_layer = 1
collision_mask = 1
data = {
"cells": PoolIntArray( 0, 0, 537919490, 1, 0, 1441793, 2, 0, 1441793, 3, 0, 1441793, 4, 0, 1441793, 5, 0, -535429119, 6, 0, 1441793, 7, 0, 538312705, 8, 0, 1441793, 9, 0, 1441793, 10, 0, 1441793, 11, 0, 1441793, 12, 0, 1441793, 13, 0, 538312705, 14, 0, 2, 65521, 0, 1048578, 65522, 0, 1441793, 65523, 0, 1441793, 65524, 0, 1441793, 65525, 0, 1441793, 65526, 0, 1441793, 65527, 0, 1441793, 65528, 0, 1441793, 65529, 0, 1441793, 65530, 0, 1441793, 65531, 0, 1441793, 65532, 0, 1441793, 65533, 0, 1441793, 65534, 0, 1441793, 65535, 0, 2, 0, 1, 1, 1, 1, 655360, 2, 1, 655360, 3, 1, 655360, 4, 1, 655360, 5, 1, 655360, 6, 1, 655360, 7, 1, 655360, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 655361, 65521, 1, 1, 65522, 1, 655360, 65523, 1, 655360, 65524, 1, 655360, 65525, 1, 537526272, 65526, 1, 655360, 65527, 1, 655360, 65528, 1, 655360, 65529, 1, 0, 65530, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 1, -1073741824, 65534, 1, 536870912, 65535, 1, 655361, 0, 2, 1, 1, 2, 655360, 2, 2, 655360, 3, 2, 655360, 4, 2, 655360, 5, 2, 655360, 6, 2, 655360, 7, 2, 655360, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 537526273, 65521, 2, 1, 65522, 2, 655360, 65523, 2, 655360, 65524, 2, 655360, 65525, 2, 655360, 65526, 2, 655360, 65527, 2, 655360, 65528, 2, 655360, 65529, 2, 0, 65530, 2, 0, 65531, 2, 536870912, 65532, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 655361, 0, 3, 1, 1, 3, 655360, 2, 3, 655360, 3, 3, 655360, 4, 3, 537526272, 5, 3, 655360, 6, 3, 655360, 7, 3, 655360, 8, 3, 1610612736, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 536870912, 13, 3, 0, 14, 3, 655361, 65521, 3, 536870913, 65522, 3, 655360, 65523, 3, 655360, 65524, 3, 537526272, 65525, 3, 655360, 65526, 3, 655360, 65527, 3, 655360, 65528, 3, 655360, 65529, 3, 0, 65530, 3, 0, 65531, 3, 0, 65532, 3, 536870912, 65533, 3, 0, 65534, 3, 0, 65535, 3, 655361, 0, 4, 1, 1, 4, 655360, 2, 4, 655360, 3, 4, 655360, 4, 4, 537526272, 5, 4, 655360, 6, 4, 655360, 7, 4, 655360, 8, 4, 0, 9, 4, 0, 10, 4, 0, 11, 4, 0, 12, 4, 0, 13, 4, 0, 14, 4, 655361, 65521, 4, 1, 65522, 4, 655360, 65523, 4, 655360, 65524, 4, 655360, 65525, 4, 655360, 65526, 4, 655360, 65527, 4, 655360, 65528, 4, 655360, 65529, 4, 0, 65530, 4, 0, 65531, 4, 0, 65532, 4, 0, 65533, 4, 0, 65534, 4, 0, 65535, 4, 655361, 0, 5, 1, 1, 5, 655360, 2, 5, 655360, 3, 5, 655360, 4, 5, 655360, 5, 5, 655360, 6, 5, 537526272, 7, 5, 655360, 8, 5, 0, 9, 5, 0, 10, 5, 0, 11, 5, 0, 12, 5, 0, 13, 5, 0, 14, 5, 655361, 65521, 5, 1, 65522, 5, 655360, 65523, 5, 655360, 65524, 5, 1074397184, 65525, 5, 655360, 65526, 5, 655360, 65527, 5, 655360, 65528, 5, 655360, 65529, 5, 0, 65530, 5, 0, 65531, 5, 536870912, 65532, 5, 0, 65533, 5, 0, 65534, 5, 536870912, 65535, 5, 537526273, 0, 6, 1, 1, 6, 655360, 2, 6, 655360, 3, 6, 655360, 4, 6, 655360, 5, 6, 655360, 6, 6, 655360, 7, 6, 537526272, 8, 6, 0, 9, 6, 0, 10, 6, 536870912, 11, 6, 0, 12, 6, 0, 13, 6, 0, 14, 6, 655361, 65521, 6, 1, 65522, 6, 655360, 65523, 6, 655360, 65524, 6, 655360, 65525, 6, 655360, 65526, 6, 655360, 65527, 6, 655360, 65528, 6, 655360, 65529, 6, 0, 65530, 6, 536870912, 65531, 6, 0, 65532, 6, 0, 65533, 6, 0, 65534, 6, 0, 65535, 6, 655361, 0, 7, 1, 1, 7, 655360, 2, 7, 537526272, 3, 7, 655360, 4, 7, 655360, 5, 7, 655360, 6, 7, 537526272, 7, 7, 1074397184, 8, 7, 0, 9, 7, 0, 10, 7, 536870912, 11, 7, 0, 12, 7, 0, 13, 7, 0, 14, 7, 655361, 65521, 7, 1, 65522, 7, 655360, 65523, 7, 655360, 65524, 7, 655360, 65525, 7, 655360, 65526, 7, 655360, 65527, 7, 655360, 65528, 7, 537526272, 65529, 7, 0, 65530, 7, 0, 65531, 7, 536870912, 65532, 7, 0, 65533, 7, 0, 65534, 7, 536870912, 65535, 7, 655361, 0, 8, 1, 1, 8, 0, 2, 8, 0, 3, 8, 0, 4, 8, 0, 5, 8, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 8, 0, 10, 8, 0, 11, 8, 0, 12, 8, 0, 13, 8, 536870912, 14, 8, 655361, 65521, 8, 1, 65522, 8, 0, 65523, 8, 0, 65524, 8, 0, 65525, 8, 0, 65526, 8, 0, 65527, 8, 0, 65528, 8, 0, 65529, 8, 536870912, 65530, 8, 0, 65531, 8, 0, 65532, 8, 0, 65533, 8, 536870912, 65534, 8, 0, 65535, 8, 655361, 0, 9, 1, 1, 9, 0, 2, 9, 0, 3, 9, 0, 4, 9, 0, 5, 9, 0, 6, 9, 536870912, 7, 9, 0, 8, 9, 0, 9, 9, 0, 10, 9, 0, 11, 9, 0, 12, 9, 0, 13, 9, 0, 14, 9, 537526273, 65521, 9, 1, 65522, 9, 0, 65523, 9, 0, 65524, 9, 0, 65525, 9, 0, 65526, 9, 536870912, 65527, 9, 0, 65528, 9, 536870912, 65529, 9, 0, 65530, 9, 0, 65531, 9, 0, 65532, 9, 0, 65533, 9, 0, 65534, 9, 0, 65535, 9, 655361, 0, 10, 1, 1, 10, 0, 2, 10, 0, 3, 10, 536870912, 4, 10, 0, 5, 10, 0, 6, 10, 0, 7, 10, -1073741824, 8, 10, 0, 9, 10, 536870912, 10, 10, 0, 11, 10, 0, 12, 10, 0, 13, 10, 0, 14, 10, 655361, 65521, 10, 1, 65522, 10, 0, 65523, 10, 0, 65524, 10, 0, 65525, 10, 0, 65526, 10, 536870912, 65527, 10, 0, 65528, 10, 0, 65529, 10, 0, 65530, 10, 0, 65531, 10, 0, 65532, 10, 0, 65533, 10, 0, 65534, 10, 0, 65535, 10, -536215551, 0, 11, 536870913, 1, 11, 0, 2, 11, 0, 3, 11, 0, 4, 11, 0, 5, 11, 0, 6, 11, 536870912, 7, 11, 0, 8, 11, 0, 9, 11, 536870912, 10, 11, 0, 11, 11, 0, 12, 11, 0, 13, 11, 0, 14, 11, 655361, 65521, 11, 1, 65522, 11, 0, 65523, 11, 0, 65524, 11, 0, 65525, 11, 0, 65526, 11, 0, 65527, 11, 0, 65528, 11, 536870912, 65529, 11, 0, 65530, 11, 0, 65531, 11, 0, 65532, 11, 0, 65533, 11, 0, 65534, 11, 536870912, 65535, 11, 655361, 0, 12, 1, 1, 12, 0, 2, 12, 0, 3, 12, 0, 4, 12, 0, 5, 12, 0, 6, 12, 0, 7, 12, 0, 8, 12, 0, 9, 12, 0, 10, 12, 0, 11, 12, 536870912, 12, 12, 536870912, 13, 12, 0, 14, 12, 655361, 65521, 12, 536870913, 65522, 12, 0, 65523, 12, 1610612736, 65524, 12, 0, 65525, 12, 0, 65526, 12, 0, 65527, 12, 0, 65528, 12, 0, 65529, 12, 0, 65530, 12, 536870912, 65531, 12, 0, 65532, 12, 0, 65533, 12, 0, 65534, 12, 0, 65535, 12, 537526273, 0, 13, 1, 1, 13, 0, 2, 13, 0, 3, 13, 0, 4, 13, 0, 5, 13, 536870912, 6, 13, 0, 7, 13, 0, 8, 13, 0, 9, 13, 0, 10, 13, 0, 11, 13, 1073741824, 12, 13, 1073741824, 13, 13, 536870912, 14, 13, 537526273, 65521, 13, 1073741825, 65522, 13, 0, 65523, 13, 536870912, 65524, 13, 536870912, 65525, 13, 0, 65526, 13, 0, 65527, 13, 0, 65528, 13, 1073741824, 65529, 13, 0, 65530, 13, 0, 65531, 13, 0, 65532, 13, 0, 65533, 13, 0, 65534, 13, 0, 65535, 13, 655361, 0, 14, 655362, 1, 14, 1048577, 2, 14, 1048577, 3, 14, 1048577, 4, 14, 1048577, 5, 14, 1611661313, 6, 14, 1048577, 7, 14, 1048577, 8, 14, 1048577, 9, 14, 1048577, 10, 14, 1048577, 11, 14, 1048577, 12, 14, 1048577, 13, 14, 1048577, 14, 14, 1612054530, 65521, 14, 655362, 65522, 14, 1048577, 65523, 14, 1048577, 65524, 14, 1048577, 65525, 14, 1048577, 65526, 14, 1048577, 65527, 14, 1048577, 65528, 14, 1048577, 65529, 14, -1072693247, 65530, 14, 1048577, 65531, 14, 1048577, 65532, 14, 1048577, 65533, 14, 1048577, 65534, 14, 1048577, 65535, 14, 1441794, 0, 65521, 1048578, 1, 65521, 1441793, 2, 65521, 1441793, 3, 65521, 1441793, 4, 65521, 1441793, 5, 65521, 1441793, 6, 65521, 1612054529, 7, 65521, 1075183617, 8, 65521, 1441793, 9, 65521, 1441793, 10, 65521, 1441793, 11, 65521, 1075183617, 12, 65521, 1441793, 13, 65521, 1441793, 14, 65521, 2, 65521, 65521, 1048578, 65522, 65521, 1441793, 65523, 65521, 1075183617, 65524, 65521, 538312705, 65525, 65521, 1441793, 65526, 65521, 1441793, 65527, 65521, 538312705, 65528, 65521, 1441793, 65529, 65521, 1441793, 65530, 65521, 1441793, 65531, 65521, 1441793, 65532, 65521, 1612054529, 65533, 65521, 1441793, 65534, 65521, 1441793, 65535, 65521, 2, 0, 65522, 1, 1, 65522, 655360, 2, 65522, 655360, 3, 65522, 655360, 4, 65522, 655360, 5, 65522, 1611268096, 6, 65522, 655360, 7, 65522, 655360, 8, 65522, 0, 9, 65522, 1073741824, 10, 65522, 0, 11, 65522, 0, 12, 65522, 0, 13, 65522, 0, 14, 65522, 1611268097, 65521, 65522, 1, 65522, 65522, 655360, 65523, 65522, 655360, 65524, 65522, -1609957376, 65525, 65522, 537526272, 65526, 65522, 655360, 65527, 65522, 655360, 65528, 65522, 655360, 65529, 65522, 0, 65530, 65522, 1073741824, 65531, 65522, 0, 65532, 65522, 0, 65533, 65522, 0, 65534, 65522, 0, 65535, 65522, 655361, 0, 65523, -536870911, 1, 65523, 537526272, 2, 65523, 655360, 3, 65523, 655360, 4, 65523, 655360, 5, 65523, 655360, 6, 65523, 655360, 7, 65523, 537526272, 8, 65523, 0, 9, 65523, 0, 10, 65523, 0, 11, 65523, 0, 12, 65523, 0, 13, 65523, 0, 14, 65523, 655361, 65521, 65523, 1, 65522, 65523, 655360, 65523, 65523, 1611268096, 65524, 65523, 1074397184, 65525, 65523, 655360, 65526, 65523, 655360, 65527, 65523, 1611268096, 65528, 65523, 655360, 65529, 65523, 0, 65530, 65523, 0, 65531, 65523, 0, 65532, 65523, 0, 65533, 65523, 0, 65534, 65523, 0, 65535, 65523, 655361, 0, 65524, 1, 1, 65524, 655360, 2, 65524, 655360, 3, 65524, 537526272, 4, 65524, 655360, 5, 65524, 655360, 6, 65524, 655360, 7, 65524, 655360, 8, 65524, 0, 9, 65524, 536870912, 10, 65524, 536870912, 11, 65524, -1610612736, 12, 65524, 0, 13, 65524, 0, 14, 65524, 1611268097, 65521, 65524, 1073741825, 65522, 65524, 655360, 65523, 65524, 1074397184, 65524, 65524, 655360, 65525, 65524, 655360, 65526, 65524, 655360, 65527, 65524, 655360, 65528, 65524, 655360, 65529, 65524, 0, 65530, 65524, 536870912, 65531, 65524, 0, 65532, 65524, 0, 65533, 65524, 1610612736, 65534, 65524, 536870912, 65535, 65524, 655361, 0, 65525, 1, 1, 65525, 1611268096, 2, 65525, 655360, 3, 65525, 1074397184, 4, 65525, 655360, 5, 65525, 1074397184, 6, 65525, 655360, 7, 65525, 655360, 8, 65525, 0, 9, 65525, 0, 10, 65525, 1073741824, 11, 65525, -1610612736, 12, 65525, 0, 13, 65525, 536870912, 14, 65525, 655361, 65521, 65525, 1, 65522, 65525, 655360, 65523, 65525, 655360, 65524, 65525, 655360, 65525, 65525, 655360, 65526, 65525, 655360, 65527, 65525, 655360, 65528, 65525, 1611268096, 65529, 65525, 0, 65530, 65525, 0, 65531, 65525, -536870912, 65532, 65525, 0, 65533, 65525, 0, 65534, 65525, 0, 65535, 65525, 655361, 0, 65526, 1, 1, 65526, 655360, 2, 65526, 1074397184, 3, 65526, 655360, 4, 65526, 655360, 5, 65526, 655360, 6, 65526, 655360, 7, 65526, 655360, 8, 65526, 0, 9, 65526, 0, 10, 65526, 0, 11, 65526, 0, 12, 65526, 0, 13, 65526, 0, 14, 65526, 1611268097, 65521, 65526, 1610612737, 65522, 65526, 655360, 65523, 65526, 655360, 65524, 65526, 1611268096, 65525, 65526, 655360, 65526, 65526, -1609957376, 65527, 65526, 655360, 65528, 65526, 655360, 65529, 65526, 0, 65530, 65526, 0, 65531, 65526, 0, 65532, 65526, 1610612736, 65533, 65526, 0, 65534, 65526, 0, 65535, 65526, 655361, 0, 65527, 1, 1, 65527, 655360, 2, 65527, 1074397184, 3, 65527, 655360, 4, 65527, 655360, 5, 65527, 1611268096, 6, 65527, 655360, 7, 65527, 1611268096, 8, 65527, 0, 9, 65527, 536870912, 10, 65527, 0, 11, 65527, 0, 12, 65527, 0, 13, 65527, 1610612736, 14, 65527, 1611268097, 65521, 65527, 1, 65522, 65527, 655360, 65523, 65527, 655360, 65524, 65527, 655360, 65525, 65527, 655360, 65526, 65527, 655360, 65527, 65527, 655360, 65528, 65527, 655360, 65529, 65527, 0, 65530, 65527, 0, 65531, 65527, 0, 65532, 65527, 0, 65533, 65527, 0, 65534, 65527, 1610612736, 65535, 65527, 655361, 0, 65528, 1, 1, 65528, 655360, 2, 65528, 537526272, 3, 65528, 655360, 4, 65528, 537526272, 5, 65528, 655360, 6, 65528, 655360, 7, 65528, 655360, 8, 65528, 0, 9, 65528, 0, 10, 65528, 0, 11, 65528, 0, 12, 65528, 0, 13, 65528, 0, 14, 65528, 1611268097, 65521, 65528, 1, 65522, 65528, 655360, 65523, 65528, 537526272, 65524, 65528, 655360, 65525, 65528, 655360, 65526, 65528, 655360, 65527, 65528, 655360, 65528, 65528, 655360, 65529, 65528, 0, 65530, 65528, 1610612736, 65531, 65528, 0, 65532, 65528, 0, 65533, 65528, 0, 65534, 65528, 0, 65535, 65528, 655361, 0, 65529, 1, 1, 65529, 536870912, 2, 65529, 0, 3, 65529, 0, 4, 65529, 0, 5, 65529, 0, 6, 65529, 0, 7, 65529, 0, 8, 65529, 0, 9, 65529, 0, 10, 65529, 0, 11, 65529, 0, 12, 65529, 0, 13, 65529, 0, 14, 65529, 655361, 65521, 65529, 1, 65522, 65529, 0, 65523, 65529, 0, 65524, 65529, 0, 65525, 65529, 536870912, 65526, 65529, 0, 65527, 65529, 0, 65528, 65529, 0, 65529, 65529, 0, 65530, 65529, 0, 65531, 65529, 0, 65532, 65529, 0, 65533, 65529, 0, 65534, 65529, 0, 65535, 65529, 655361, 0, 65530, 1, 1, 65530, 0, 2, 65530, 0, 3, 65530, 0, 4, 65530, 0, 5, 65530, 0, 6, 65530, 0, 7, 65530, 0, 8, 65530, 0, 9, 65530, 1610612736, 10, 65530, 536870912, 11, 65530, 0, 12, 65530, 0, 13, 65530, 0, 14, 65530, -1073086463, 65521, 65530, 1, 65522, 65530, 0, 65523, 65530, 0, 65524, 65530, 1073741824, 65525, 65530, 0, 65526, 65530, 0, 65527, 65530, 0, 65528, 65530, 0, 65529, 65530, 0, 65530, 65530, 0, 65531, 65530, 0, 65532, 65530, 0, 65533, 65530, 0, 65534, 65530, 1073741824, 65535, 65530, 655361, 0, 65531, 1, 1, 65531, 0, 2, 65531, 0, 3, 65531, 0, 4, 65531, 0, 5, 65531, 0, 6, 65531, 0, 7, 65531, 0, 8, 65531, 0, 9, 65531, 0, 10, 65531, 0, 11, 65531, 0, 12, 65531, 0, 13, 65531, 0, 14, 65531, 537526273, 65521, 65531, 1, 65522, 65531, 0, 65523, 65531, 0, 65524, 65531, 536870912, 65525, 65531, 1073741824, 65526, 65531, 0, 65527, 65531, 0, 65528, 65531, 0, 65529, 65531, 0, 65530, 65531, 0, 65531, 65531, 0, 65532, 65531, 0, 65533, 65531, 536870912, 65534, 65531, 0, 65535, 65531, 537526273, 0, 65532, 536870913, 1, 65532, 0, 2, 65532, 1610612736, 3, 65532, 536870912, 4, 65532, 0, 5, 65532, 536870912, 6, 65532, 536870912, 7, 65532, 536870912, 8, 65532, 536870912, 9, 65532, 0, 10, 65532, 0, 11, 65532, 536870912, 12, 65532, 0, 13, 65532, 536870912, 14, 65532, 655361, 65521, 65532, 1, 65522, 65532, 0, 65523, 65532, 0, 65524, 65532, 536870912, 65525, 65532, 0, 65526, 65532, 536870912, 65527, 65532, 0, 65528, 65532, 0, 65529, 65532, 0, 65530, 65532, 0, 65531, 65532, 0, 65532, 65532, 536870912, 65533, 65532, 0, 65534, 65532, 0, 65535, 65532, 537526273, 0, 65533, 1, 1, 65533, 0, 2, 65533, 0, 3, 65533, 536870912, 4, 65533, 0, 5, 65533, 0, 6, 65533, 0, 7, 65533, 0, 8, 65533, 0, 9, 65533, 0, 10, 65533, 0, 11, 65533, 0, 12, 65533, 0, 13, 65533, 0, 14, 65533, 655361, 65521, 65533, 536870913, 65522, 65533, 0, 65523, 65533, 0, 65524, 65533, 0, 65525, 65533, 0, 65526, 65533, 0, 65527, 65533, 0, 65528, 65533, 0, 65529, 65533, 0, 65530, 65533, 0, 65531, 65533, 0, 65532, 65533, 0, 65533, 65533, 0, 65534, 65533, 0, 65535, 65533, 655361, 0, 65534, 1, 1, 65534, 536870912, 2, 65534, 0, 3, 65534, 0, 4, 65534, 0, 5, 65534, 0, 6, 65534, 0, 7, 65534, 536870912, 8, 65534, 0, 9, 65534, 0, 10, 65534, 536870912, 11, 65534, 0, 12, 65534, 0, 13, 65534, 0, 14, 65534, 655361, 65521, 65534, 1, 65522, 65534, 0, 65523, 65534, 0, 65524, 65534, 0, 65525, 65534, 0, 65526, 65534, 0, 65527, 65534, 0, 65528, 65534, 0, 65529, 65534, 0, 65530, 65534, 0, 65531, 65534, 0, 65532, 65534, 0, 65533, 65534, 0, 65534, 65534, 0, 65535, 65534, 655361, 0, 65535, 655362, 1, 65535, 1048577, 2, 65535, 1048577, 3, 65535, 1048577, 4, 65535, 1048577, 5, 65535, 1048577, 6, 65535, 1048577, 7, 65535, 1048577, 8, 65535, 1048577, 9, 65535, 1048577, 10, 65535, 1048577, 11, 65535, 1048577, 12, 65535, 1048577, 13, 65535, 537919489, 14, 65535, 1441794, 65521, 65535, -536215550, 65522, 65535, 1048577, 65523, 65535, 1048577, 65524, 65535, 1048577, 65525, 65535, 1048577, 65526, 65535, 1048577, 65527, 65535, 1048577, 65528, 65535, 537919489, 65529, 65535, 1048577, 65530, 65535, 1048577, 65531, 65535, 1048577, 65532, 65535, 1048577, 65533, 65535, 1048577, 65534, 65535, 1048577, 65535, 65535, 1441794 )
}
_sections_unfolded = [ "Cell", "Transform" ]
__meta__ = {
"_editor_clip_": 0
}

[node name="rts_map" parent="game_world/environment/terrain" index="2" instance=ExtResource( 25 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 42.3442, 0.358723, -54.2645 )

[node name="structures" type="Spatial" parent="game_world/environment" index="1"]

editor/display_folded = true

[node name="building" parent="game_world/environment/structures" index="0" instance=ExtResource( 26 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -40.7332, 0, -40.2434 )

[node name="building2" parent="game_world/environment/structures" index="1" instance=ExtResource( 26 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -40.7332, -3.9726, -34.1833 )

[node name="building3" parent="game_world/environment/structures" index="2" instance=ExtResource( 26 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -40.5981, -5.32135, -27.9748 )

[node name="foilage" type="Spatial" parent="game_world/environment" index="2"]

editor/display_folded = true

[node name="tree1" type="MeshInstance" parent="game_world/environment/foilage" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27.8418, 0.806796, 30.226 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 27 )
skeleton = NodePath("..")
material/0 = null
material/1 = null
material/2 = null
material/3 = null
_sections_unfolded = [ "Transform" ]

[node name="tree2" type="MeshInstance" parent="game_world/environment/foilage" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.1791, 0, 28.9612 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 28 )
skeleton = NodePath("..")
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
_sections_unfolded = [ "Transform" ]

[node name="tree3" type="MeshInstance" parent="game_world/environment/foilage" index="2"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 25.545, 0.89042, 14.2305 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 29 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="cameras" type="Spatial" parent="game_world" index="2"]


